--- a/web_app/bower.json
+++ b/web_app/bower.json
@@ -11,6 +11,7 @@
 		"angular-route": "^1.4.0",
 		"angular-sanitize": "^1.4.0",
 		"angular-touch": "^1.4.0",
+		"angular-material": "^1.1.1",
 		"font-awesome": "fontawesome#^4.6.3"
 	},
 	"devDependencies": {
